[RENDER] register/login pages

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,27 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <section class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="h3 mb-3 font-weight-normal" style="text-align:center;">Inscription</h1><br>
+                   
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                {{ form_start(registrationForm) }}
+                    {{ form_row(registrationForm.email) }}<br>
+                    {{ form_row(registrationForm.plainPassword, {
+                                label: 'Mot de passe'
+                                })
+                    }} <br>
+                    {{ form_row(registrationForm.RGPDConsent) }}<br>
+                     <div class="row">
+                        <div class="col">
+                            <p>Vous êtes déjà inscrit ? <a href="{{ path('app_login') }}">Connectez-vous</a></p>
+                        </div><br>
+                    </div>
+                    <button class="btn btn-outline-success mt-3" type="submit"></i> S'inscrire</button>
+                {{ form_end(registrationForm) }}
+            </div>
+        </div>
+    </section>
 {% endblock %}
