--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,6 +40,11 @@
                         </label>
                     </div>
                 #}
+                <div class="row">
+                        <div class="col">
+                            <p>Vous n'avez pas de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous</a></p>
+                        </div>
+                    </div>
                 <div style="text-align:center;">
                     <button class="btn btn-outline-success mt-3" type="submit">
                         Connexion
