--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link" aria-current="page" href="accueil">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="profil">Profil</a>
