--- a/public/assets/profil.css
+++ b/public/assets/profil.css
@@ -12,3 +12,168 @@ p {
 .user{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.img-profile img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+/* .img-profile {
+    float: right;
+} */
+
+.img-profile {
+    position: relative;
+    float: right;
+    margin-right: 10px;
+}
+
+.icon-tool-edit {
+    position: absolute;
+    top: 0;
+    left: -20px;
+}
+
+.icon-like {
+    position: absolute;
+    top: 70px;
+    left: -20px;
+}
+
+.icon-tool-edit a {
+    text-decoration: none;
+    color: #000;
+}
+
+.icon-like a {
+    text-decoration: none;
+    color: red;
+}
+
+.biographie {
+    position : absolute;
+    margin-left: -50px;
+    width: 200px;
+}
+
+.biographie-text {
+    margin-top: 10px;
+    margin-right: 50px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.temps-visionnage-text {
+    font-weight: 800;
+}
+
+/* --------------------------------CLASSEMENT-------------------------------- */
+
+.select-menu {
+    max-width: 330px;
+    margin-top: 50px;
+    /* margin: 50px auto; */
+}
+
+.select-menu .select-btn {
+    display: flex;
+    height: 55px;
+    background: #fff;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 400;
+    border-radius: 8px;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.select-menu .options {
+    position: absolute;
+    width: 330px;
+    overflow-y: auto;
+    max-height: 295px;
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    animation-name: fadeInDown;
+    -webkit-animation-name: fadeInDown;
+    animation-duration: 0.35s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 0.35s;
+    -webkit-animation-fill-mode: both;
+}
+
+.select-menu .options .option {
+    display: flex;
+    height: 55px;
+    cursor: pointer;
+    padding: 0 16px;
+    border-radius: 8px;
+    align-items: center;
+    background: #fff;
+}
+
+.select-menu .options .option:hover {
+    background: #f2f2f2;
+}
+
+.select-menu .options .option i {
+    font-size: 25px;
+    margin-right: 12px;
+}
+
+.select-menu .options .option .option-text {
+    font-size: 18px;
+    color: #333;
+}
+
+.select-btn i {
+    font-size: 25px;
+    transition: 0.3s;
+}
+  
+.select-menu.active .select-btn i {
+    transform: rotate(-180deg);
+}
+
+.select-menu.active .options {
+    display: block;
+    opacity: 0;
+    z-index: 10;
+    animation-name: fadeInUp;
+    -webkit-animation-name: fadeInUp;
+    animation-duration: 0.4s;
+    animation-fill-mode: both;
+    -webkit-animation-duration: 0.4s;
+    -webkit-animation-fill-mode: both;
+}
+  
+@keyframes fadeInUp {
+    from {
+      transform: translate3d(0, 30px, 0);
+    }
+    to {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
+}
+
+@keyframes fadeInDown {
+    from {
+      transform: translate3d(0, 0, 0);
+      opacity: 1;
+    }
+    to {
+      transform: translate3d(0, 20px, 0);
+      opacity: 0;
+    }
+}
+
+.options li {
+    pointer-events: none;
+}
