--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -17,7 +17,7 @@
         <div class="card-body">
             <h5 class="card-title">{{anime.nom}}</h5>
             <p class="card-text">{{anime.synopsis}}</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Voir l'anime</a>
         </div>
         </div>
         
