--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,19 +27,7 @@
                     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
                     <br><br>
                     <input type="hidden" name="_csrf_token"
-                        value="{{ csrf_token('authenticate') }}"
-                >
-
-                {#
-                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                    See https://symfony.com/doc/current/security/remember_me.html
-
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" name="_remember_me"> Remember me
-                        </label>
-                    </div>
-                #}
+                        value="{{ csrf_token('authenticate') }}">
                 <div class="row">
                         <div class="col">
                             <p>Vous n'avez pas de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous</a></p>
