--- a/public/assets/index.css
+++ b/public/assets/index.css
@@ -17,7 +17,7 @@ body{
 
             <h5 class="titreCarteAnime"></h5>
             <p class="synopsisCarteAnime"></p>
-            <a href="#" class="btnCarteAnime"></a>
+            <a class="btnCarteAnime"></a>
 
         </div>
 
