--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Mon profil{% endblock %}
 
+{# {% block antiBootstrap %}{% endblock %} #}
+
 {% block body %}
 <link rel="stylesheet" href="assets/profil.css">
 
@@ -86,6 +88,8 @@
             </div>
 
         </div>
+
+        <hr class="hrProfil">
 
         <div class="biographie">
             <p class="bioTxt">{{ user.biographie }}</p>
