--- a/public/assets/connexion.css
+++ b/public/assets/connexion.css
@@ -43,14 +43,15 @@ body{
 .maForm{
     flex-basis: 22%;
     background: var(--cl2);
-    height: 430px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 15px;
     border-radius: 20px;
-    border: 3px solid var(--cl4);
+    border-left: 5px solid var(--cl4);
+    border-right: 5px solid var(--cl4);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -63,6 +64,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-weight: bolder;
 }
 
 .hrTop{
