--- a/public/assets/inscription.css
+++ b/public/assets/inscription.css
@@ -77,7 +77,8 @@ body{
     align-items: center;
     padding: 15px;
     border-radius: 20px;
-    border: 3px solid var(--cl5);
+    border-left: 6px solid var(--cl5);
+    border-right: 6px solid var(--cl5);
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
