[ADD] filter in home

--- a/public/assets/index.css
+++ b/public/assets/index.css
@@ -89,3 +89,15 @@ body{
     text-align: center;
     margin-top: 15px;
 }
+
+.erreurRecherche {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
