remove all migration files

--- a/public/assets/base.css
+++ b/public/assets/base.css
@@ -1,7 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 :root{
     --cl1: #f4f1de;
     --cl2: #ffb116;
     --cl3: #3f7caf;
     --cl4: #004792;
     --cl5: #003051;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito', sans-serif;
+}
+
+ul{
+    text-decoration: none;
+}
+
+.laNavigation{
+    width: 100%;
+    border: 1px solid red;
 }
