--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,47 +12,18 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         {% endblock %}
 
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-
-        {# {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %} #}
-
-        {# {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %} #}
         {% block nav %}
-        {# <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-            <div class="collapse navbar-collapse nav justify-content-center" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="accueil">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="profil">Profil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="deconnexion">Deconnexion</a>
-                    </li>
-                </ul>
-            </div>
-        </nav> #}
-        <nav class="laNavigation">
-            <div class="navStart">
-                <div class="liNav">
-                    <i class="fa-solid fa-user"></i>
-                    <span>test</span>
+            <div class="laNavigation">
+                <div class="navStart">
+                    <img class="logoWikAnime" src="assets/img/Base/logoWikanime.png">
+                </div>
+                <div class="navEnd">
+                    <a class="unOnglet" href="{{ path('app_home') }}" id="Accueil"><span>Accueil</span></a>
+                    <a class="unOnglet" href="{{ path('app_home') }}" id="Contact"><span>Contact</span></a>
+                    <a class="unOnglet" href="{{ path('app_profile') }}" id="Profil"><span>Profil</span></a>
+                    <a class="unOnglet" href="{{ path('app_logout') }}" id="Deconnexion"><span>Deconnexion</span></a>
                 </div>
             </div>
-            <div class="navEnd">
-                <a class="btnDeconnexion">
-            </div>
-        </nav>
         {% endblock %}
     </head>
     <body>
