--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,7 +34,9 @@
                 <div class="InfosCarteAnime">
                     <h5 class="titreCarteAnime">{{anime.nom}}</h5>
                     <p class="synopsisCarteAnime">{{anime.synopsis}}</p>
-                    <a href="#" class="btnCarteAnime">Voir l'anime</a>
+                    {# <a href={{ path('app_detail', {'id': anime.id})}} class="btnCarteAnime">Voir l'anime</a> #}
+                    <a href="{{ path('app_detail', {'id': anime.id}) }}">Voir détails</a>
+
                 </div>
             </div>
         {% endfor %}
